--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -26,6 +26,9 @@ a {
 
 button {
   cursor: pointer;
+  padding: 0;
+  margin: 0;
+  display: block;
 }
 
 img {
@@ -33,3 +36,11 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+
