--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -125,3 +125,21 @@ img {
 .is-hidden {
   display: none;
 }
+
+.btn {
+  color: #fff;
+  background-color: #4e75ff;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 125px;
+  height: 40px;
+  margin-top: 32px;
+  border: none;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
