--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -90,37 +90,6 @@ img {
   justify-content: center;
   gap: 24.5px;
 }
-.loader {
-  display: block;
-  position: relative;
-  height: 10px;
-  width: 80%;
-  border: 1px solid #fff;
-  border-radius: 10px;
-  overflow: hidden;
-}
-.loader::after {
-  content: '';
-  width: 100%;
-  height: 100%;
-  background: #4b4a4a;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  box-sizing: border-box;
-  animation: animloader 2s linear infinite;
-}
-
-@keyframes animloader {
-  0% {
-    left: 0;
-    transform: translateX(-100%);
-  }
-  100% {
-    left: 100%;
-    transform: translateX(0%);
-  }
-}
 
 .is-hidden {
   display: none;
@@ -142,4 +111,30 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.loader-wrapper {
+  text-align: center;
+  width: 256px;
+  height: 24px;
+}
+
+.textloader {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.textloader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border-radius: 50%;
+  border-left: 4px solid #ff3d00;
+  border-bottom: 4px solid transparent;
+  animation: rotation 0.5s linear infinite reverse;
 }
