--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -102,8 +102,9 @@ img {
   padding: 8px 16px;
   width: 125px;
   height: 40px;
-  margin-top: 32px;
+  margin: 0 auto;
   border: none;
+  box-sizing: border-box;
 }
 
 .container {
