--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -54,7 +54,7 @@ p {
   align-items: center;
   margin-bottom: 32px;
 }
-.input {
+.input-text {
   outline: none;
   border: 1px solid #808080;
   border-radius: 4px;
@@ -62,7 +62,7 @@ p {
   height: 40px;
   padding-left: 10px;
 }
-.form-button {
+.form-btn {
   border: none;
   display: flex;
   justify-content: center;
@@ -91,11 +91,8 @@ img {
   gap: 24.5px;
 }
 
-.is-hidden {
+.loadmore-btn {
   display: none;
-}
-
-.btn {
   color: #fff;
   background-color: #4e75ff;
   border-radius: 8px;
@@ -105,6 +102,7 @@ img {
   margin: 0 auto;
   border: none;
   box-sizing: border-box;
+  margin-top: 20px;
 }
 
 .container {
